@@ -11,29 +11,7 @@
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <connect.webservices.version>4.3.0-SNAPSHOT</connect.webservices.version>
-        <connect.commontypes.version>4.3.0-SNAPSHOT</connect.commontypes.version>
-        <cxf.version>2.7.3</cxf.version>
-        <spring.version>3.0.7.RELEASE</spring.version>
-        <slf4j.version>1.7.0</slf4j.version>
-        <openam.version>10.0.1</openam.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <connect.common.properties>Dev</connect.common.properties>
-        <checkstyle.skip>false</checkstyle.skip>
-        <skip.cobertura>false</skip.cobertura>
-        <skip.source>true</skip.source>
-        <skip.findbugs>false</skip.findbugs>
-        <pmd.failOnViolation>false</pmd.failOnViolation>
-        <cobertura.check.haltOnFailure>false</cobertura.check.haltOnFailure>
-        <cobertura.totalBranchRate>85</cobertura.totalBranchRate>
-        <cobertura.totalLineRate>85</cobertura.totalLineRate>
-        <compiler.source>1.7</compiler.source>
-        <compiler.target>1.7</compiler.target>
-    </properties>
-
     <modules>
-        <module>build-tools</module>
         <module>Production</module>
         <module>DBScripts</module>
         <module>SoapUI_Test</module>
@@ -1086,172 +1064,15 @@
     </dependencyManagement>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-ear-plugin</artifactId>
-                    <version>2.8</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.6</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.9.1</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.connectopensource</groupId>
-                            <artifactId>build-tools</artifactId>
-                            <version>4.6.0-SNAPSHOT</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.13</version>
-                    <configuration>
-                        <argLine>-XX:MaxPermSize=1012m</argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-eclipse-plugin</artifactId>
-                    <version>2.9</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.cargo</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>1.3.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-pmd-plugin</artifactId>
-                    <version>2.7.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>2.5.2</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.connectopensource</groupId>
-                            <artifactId>build-tools</artifactId>
-                            <version>${project.parent.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <plugins>
-                            <plugin>
-                                <groupId>com.h3xstream.findsecbugs</groupId>
-                                <artifactId>plugin</artifactId>
-                                <version>1.1.0</version>
-                            </plugin>
-                        </plugins>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>com.github.redfish4ktc.soapui</groupId>
-                    <artifactId>maven-soapui-extension-plugin</artifactId>
-                    <version>4.5.1.2</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>mysql</groupId>
-                            <artifactId>mysql-connector-java</artifactId>
-                            <version>5.1.10</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.connectopensource</groupId>
-                            <artifactId>CONNECTCommonTypesLib</artifactId>
-                            <version>${connect.commontypes.version}</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.connectopensource</groupId>
-                            <artifactId>FileUtils</artifactId>
-                            <version>${project.parent.version}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.cxf</groupId>
-                    <artifactId>cxf-codegen-plugin</artifactId>
-                    <version>2.7.3</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-maven-plugin</artifactId>
-                    <version>9.0.0.RC0</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${compiler.source}</source>
-                    <target>${compiler.target}</target>
-                    <testSource>${compiler.source}</testSource>
-                    <testTarget>${compiler.target}</testTarget>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
-                    <useProjectReferences>true</useProjectReferences>
-                    <projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <skipSource>${skip.source}</skipSource>
-                    <attach>true</attach>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <!-- use baseVersion instead of timestamp version to support skinny WARS for SNAPSHOT versions -->
-                    <outputFileNameMapping>@{artifactId}@-@{baseVersion}@.@{extension}@</outputFileNameMapping>
-                </configuration>
             </plugin>
         </plugins>
     </build>
 
     <repositories>
-        <repository>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo.maven.apache.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
         <repository>
             <id>jboss</id>
             <name>JBoss</name>
@@ -1280,10 +1101,6 @@
 
     <pluginRepositories>
         <pluginRepository>
-            <id>eviwarePluginRepository</id>
-            <url>http://www.soapui.org/repository/maven2/</url>
-        </pluginRepository>
-        <pluginRepository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </pluginRepository>
@@ -1300,5 +1117,112 @@
                 <skip.findbugs>true</skip.findbugs>
             </properties>
         </profile>
+
+        <profile>
+            <id>SCA</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.connectopensource</groupId>
+                                <artifactId>build-tools</artifactId>
+                                <version>${project.parent.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <configLocation>connect/checkstyle.xml</configLocation>
+                            <headerLocation>connect/LICENSE.txt</headerLocation>
+                            <failOnViolation>false</failOnViolation>
+                            <failOnError>false</failOnError>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>checkstyle</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>checkstyle</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>findbugs-maven-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.connectopensource</groupId>
+                                <artifactId>build-tools</artifactId>
+                                <version>${project.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <effort>Max</effort>
+                            <threshold>Low</threshold>
+                            <failOnError>false</failOnError>
+                            <includeFilterFile>connect/findbugs-include.xml</includeFilterFile>
+                            <includeFilterFile>connect/findbugs-include.xml</includeFilterFile>
+                            <plugins>
+                                <plugin>
+                                    <groupId>com.h3xstream.findsecbugs</groupId>
+                                    <artifactId>findsecbugs-plugin</artifactId>
+                                    <version>${findsecbugs.version}</version>
+                                </plugin>
+                            </plugins>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>findbugs</id>
+                                <goals>
+                                    <goal>findbugs</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.connectopensource</groupId>
+                                <artifactId>build-tools</artifactId>
+                                <version>${project.parent.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <targetJdk>${compiler.target}</targetJdk>
+                            <rulesets>
+                                <ruleset>connect/pmd.xml</ruleset>
+                            </rulesets>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>pmd</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>pmd</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>1.2.11</version>
+                        <executions>
+                            <execution>
+                                <id>dependency-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
+
